--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VITTY">
-        <receiver android:name=".ui.widgets.TodayWidget">
+        <receiver android:name="com.dscvit.vitty.widget.TodayWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -22,7 +22,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/today_widget_info" />
         </receiver>
-        <receiver android:name=".ui.widgets.NextClassWidget">
+        <receiver android:name="com.dscvit.vitty.widget.NextClassWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -45,6 +45,9 @@
         <activity
             android:name=".ui.schedule.ScheduleActivity"
             android:screenOrientation="portrait" />
+
+        <receiver android:name=".notif.AlarmReceiver" />
+
     </application>
 
 </manifest>
