--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,11 +73,17 @@ dependencies {
     // Firestore
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
 
+    // FCM
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
     // Loading Animations
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     // Timber for logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Work Manager
+    implementation "androidx.work:work-runtime-ktx:2.6.0-alpha02"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
