--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
 
 dependencies {
 
-    // Android
-    implementation 'androidx.core:core-ktx:1.5.0'
+    // Android Stuff
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -63,8 +63,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     // Firestore
-    implementation 'com.google.firebase:firebase-firestore:23.0.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
 
     // Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
@@ -85,7 +85,4 @@ dependencies {
 
     // Timber for logs
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
-    // Work Manager
-    implementation "androidx.work:work-runtime-ktx:2.6.0-alpha02"
 }
