feat: exam mode added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VITTY">
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.VITTY.SettingsScreen" />
 
         <receiver
-            android:name="com.dscvit.vitty.widget.TodayWidget"
-            android:label="Today's Schedule"
-            android:exported="true">
+            android:name=".widget.TodayWidget"
+            android:exported="true"
+            android:label="@string/title_today_schedule">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -28,11 +33,10 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/today_widget_info" />
         </receiver>
-
         <receiver
-            android:name="com.dscvit.vitty.widget.NextClassWidget"
-            android:label="Next Class"
-            android:exported="true">
+            android:name=".widget.NextClassWidget"
+            android:exported="true"
+            android:label="@string/title_next_class">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -45,36 +49,33 @@
         <activity
             android:name=".activity.InstructionsActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.AuthActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.ScheduleActivity"
             android:screenOrientation="portrait" />
 
-        <receiver android:name=".notif.DeviceBootReceiver"
+        <receiver
+            android:name=".notif.DeviceBootReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
-
         <receiver android:name=".notif.AlarmReceiver" />
 
         <service
             android:name=".service.TodayWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
-
     </application>
 
 </manifest>
