--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,15 +20,15 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.dscvit.vitty"
         minSdkVersion 24
-        targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.1"
+        targetSdkVersion 31
+        versionCode 3
+        versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.release
     }
@@ -58,11 +58,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -77,7 +76,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
     // Firestore
-    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'com.google.firebase:firebase-firestore:23.0.4'
 
     // Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
@@ -89,5 +88,5 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Work Manager
-    implementation "androidx.work:work-runtime-ktx:2.6.0-rc01"
+    implementation "androidx.work:work-runtime-ktx:2.7.0"
 }
