--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,8 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".receiver.AlarmReceiver" />
+        <receiver android:name=".receiver.ShareReceiver" />
+
 
         <service
             android:name=".service.TodayWidgetService"
